<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/questionCardViewStyle"
                android:backgroundTint="@color/yellow"
                android:elevation="8dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question1"
                        style="@style/questionStyle"
                        android:text="@string/question1" />

                    <CheckBox
                        android:id="@+id/checkBox1"
                        style="@style/checkBoxOption"
                        android:text="@string/q1Option1" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        style="@style/checkBoxOption"
                        android:text="@string/q1Option2" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        style="@style/checkBoxOption"
                        android:text="@string/q1Option3" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        style="@style/checkBoxOption"
                        android:text="@string/q1Option4" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/questionCardViewStyle"
                android:backgroundTint="@color/yellow"
                android:elevation="8dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question2"
                        style="@style/questionStyle"
                        android:text="@string/question2" />

                    <RadioGroup
                        android:id="@+id/radioGroup2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioGroup2Option1"
                            style="@style/checkBoxOption"
                            android:text="@string/q2Option1" />

                        <RadioButton
                            android:id="@+id/radioGroup2Option2"
                            style="@style/checkBoxOption"
                            android:text="@string/q2Option2" />

                        <RadioButton
                            android:id="@+id/radioGroup2Option3"
                            style="@style/checkBoxOption"
                            android:text="@string/q2Option3" />

                        <RadioButton
                            android:id="@+id/radioGroup2Option4"
                            style="@style/checkBoxOption"
                            android:text="@string/q2Option4" />
                    </RadioGroup>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/questionCardViewStyle"
                android:backgroundTint="@color/yellow"
                android:elevation="8dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question3"
                        style="@style/questionStyle"
                        android:text="@string/question3" />

                    <RadioGroup
                        android:id="@+id/radioGroup3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioGroup3Option1"
                            style="@style/checkBoxOption"
                            android:text="@string/q3Option1" />

                        <RadioButton
                            android:id="@+id/radioGroup3Option2"
                            style="@style/checkBoxOption"
                            android:text="@string/q3Option2" />

                        <RadioButton
                            android:id="@+id/radioGroup3Option3"
                            style="@style/checkBoxOption"
                            android:text="@string/q3Option3" />

                        <RadioButton
                            android:id="@+id/radioGroup3Option4"
                            style="@style/checkBoxOption"
                            android:text="@string/q3Option4" />
                    </RadioGroup>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/questionCardViewStyle"
                android:backgroundTint="@color/yellow"
                android:elevation="8dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question4"
                        style="@style/questionStyle"
                        android:text="@string/question4" />

                    <EditText
                        android:id="@+id/editTextAnswer4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans"
                        android:textSize="16sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/questionCardViewStyle"
                android:backgroundTint="@color/yellow"
                android:elevation="8dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question5"
                        style="@style/questionStyle"
                        android:text="@string/question5" />

                    <EditText
                        android:id="@+id/editTextAnswer5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans"
                        android:textSize="16sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/submitAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/button_round"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>